<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mudita Timer</string>

    <!-- Setup screen -->
    <string name="preset_5">5 min</string>
    <string name="preset_10">10 min</string>
    <string name="preset_25">25 min</string>
    <string name="or">or</string>
    <string name="minus">−</string>
    <string name="plus">+</string>
    <string name="min">min</string>
    <string name="sec">sec</string>
    <string name="start">Start</string>

    <!-- Timer screen -->
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>

    <!-- Done screen -->
    <string name="time_up">Time\'s up</string>
    <string name="start_again">Start again</string>
    <string name="back">Back</string>

    <!-- Mode toggle -->
    <string name="mode_timer">Timer</string>
    <string name="mode_stopwatch">Stopwatch</string>

    <!-- Stopwatch screen -->
    <string name="stopwatch_start">Start</string>
    <string name="stopwatch_stop">Stop</string>
    <string name="stopwatch_reset">Reset</string>

    <!-- Foreground service notification -->
    <string name="notification_channel_name">Mudita Timer</string>
    <string name="notification_timer_running">Timer running</string>
    <string name="notification_stopwatch_running">Stopwatch running</string>
</resources>
